--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,27 @@
 spring:
   application:
     name: uuid-gen
+  freemarker:
+    enabled: true
+    cache: false
+    # Content Type
+    content-type: text/html
+    charset: utf-8
+    suffix: .ftl
+    request-context-attribute: request
+    expose-request-attributes: false
+    expose-session-attributes: false
+    allow-request-override: true
+    allow-session-override: true
+    expose-spring-macro-helpers: true
+    check-template-location: true
+    prefer-file-system-access: true
+    template-loader-path:
+      - classpath:/templates/
+    settings:
+      datetime_format: yyyy-MM-dd HH:mm:ss
+      template_update_delay: 30m
+      default_encoding: utf-8
 
 server:
   servlet:
